reports/intro.log
Traceback (most recent call last):
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\nbclient\util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\nbclient\util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\naufal aslam\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
''''idf=vect.idf_
dd=dict(zip(vect.get_feature_names_out(), idf))
l=sorted(dd, key=(dd).get)
# print(l)
print(l[0],l[-1])
print(dd['kemajuan'])
print(dd['sangat'])
------------------

[1;36m  File [1;32m"C:\Users\NAUFAL~1\AppData\Local\Temp/ipykernel_6296/4251447112.py"[1;36m, line [1;32m7[0m
[1;33m    print(dd['sangat'])[0m
[1;37m                       
^[0m
[1;31mSyntaxError[0m[1;31m:[0m EOF while scanning triple-quoted string literal

SyntaxError: EOF while scanning triple-quoted string literal (Temp/ipykernel_6296/4251447112.py, line 7)

